--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ piexif==1.1.3
 tweepy==4.14.0
 elevenlabs==0.2.27
 gunicorn==21.2.0
-gevent==23.9.1
-Werkzeug==3.0.1 
+gevent==24.2.1
+Werkzeug==3.0.1
+requests>=2.31.0
+urllib3>=2.0.7
+certifi>=2023.7.22 
